# Rings_Matrix

./: CMakeLists.txt  README.md  main.cpp
include/: base_operators.hpp  graph.hpp  matrix_rings.hpp  puason_equation.hpp  puason_new.hpp
